--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="pt_br">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link   rel="stylesheet" href="stilo.css">
     <title>Primeira aula de desenvolvimento web</title>
 </head>
 <body>
-    
+    <h1 id="titulo">Revisão</h1>
+   <div>
+    <input type ="text" placeholder="Digite seu nome:">
+    <input type ="number" placeholder="Digitesu número:">
+    <input type ="date" placeholder="Digitesua daa de nascimento">
+   
+   </div>
+
+   <button>Ok!</button>
+    <footer>
+        <p>Desenvolvido por Jhenifer Meneses</p>
+    </footer>
 </body>
 </html>
