--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="pt_br">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link   rel="stylesheet" href="stilo.css">
-    <title>Primeira aula de desenvolvimento web</title>
-</head>
-<body>
-    <h1 id="titulo">Revisão</h1>
-   <div>
-    <input type ="text" placeholder="Digite seu nome:">
-    <input type ="number" placeholder="Digitesu número:">
-    <input type ="date" placeholder="Digitesua daa de nascimento">
-   
-   </div>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formulário Centralizado</title>
+    <link rel="stylesheet" href="stilo.css" />
+  </head>
+  <body>
+    <div class="form-container">
+      <h1>Formulário de Contato</h1>
+      <form>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required />
 
-   <button>Ok!</button>
+        <label for="telefone">Telefone:</label>
+        <input type="tel" id="telefone" name="telefone" required />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="data-nascimento">Data de Nascimento:</label>
+        <input
+          type="date"
+          id="data-nascimento"
+          name="data-nascimento"
+          required
+        />
+
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
     <footer>
-        <p>Desenvolvido por Jhenifer Meneses</p>
+      <p>Desenvolvido por Jhenifer Meneses.</p>
     </footer>
-</body>
+  </body>
 </html>
