--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
       <h1>Formulário de Contato</h1>
       <form>
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required />
+        <input type="text" id="nome" name="nome" required placeholder="Digite seu nome" />
 
         <label for="telefone">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" required />
+        <input type="tel" id="telefone" name="telefone" required placeholder="Digite seu telefone"/>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+        <input type="email" id="email" name="email" required placeholder="digite seu e-mail" />
 
         <label for="data-nascimento">Data de Nascimento:</label>
         <input
           type="date"
           id="data-nascimento"
           name="data-nascimento"
-          required
+          required 
+          placeholder="digite sua data de nascimento"
         />
 
         <button type="submit">Enviar</button>
