--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulário Centralizado</title>
     <link rel="stylesheet" href="stilo.css" />
+    
   </head>
   <body>
     <div class="form-container">
@@ -28,11 +29,12 @@
           placeholder="digite sua data de nascimento"
         />
 
-        <button type="submit">Enviar</button>
+        <button id="botao-submeter"">Enviar</button>
       </form>
     </div>
     <footer>
       <p>Desenvolvido por Jhenifer Meneses.</p>
+      <script>index.js</script>
     </footer>
   </body>
 </html>
