--- a/index.html
+++ b/index.html
@@ -3,38 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulário Centralizado</title>
-    <link rel="stylesheet" href="stilo.css" />
-    
+    <title>Formulário Validado</title>
+    <link rel="stylesheet" href="estilo.css" />
   </head>
   <body>
-    <div class="form-container">
-      <h1>Formulário de Contato</h1>
-      <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required placeholder="Digite seu nome" />
+    <form id="meuFormulario">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required />
 
-        <label for="telefone">Telefone:</label>
-        <input type="tel" id="telefone" name="telefone" required placeholder="Digite seu telefone"/>
+      <label for="idade">Idade:</label>
+      <input type="number" id="idade" name="idade" required />
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required placeholder="digite seu e-mail" />
+      <label for="cpf">CPF:</label>
+      <input type="text" id="cpf" name="cpf" required />
 
-        <label for="data-nascimento">Data de Nascimento:</label>
-        <input
-          type="date"
-          id="data-nascimento"
-          name="data-nascimento"
-          required 
-          placeholder="digite sua data de nascimento"
-        />
+      <label for="dataNascimento">Data de Nascimento:</label>
+      <input type="date" id="dataNascimento" name="dataNascimento" required />
 
-        <button id="botao-submeter"">Enviar</button>
-      </form>
-    </div>
-    <footer>
-      <p>Desenvolvido por Jhenifer Meneses.</p>
-      <script>index.js</script>
-    </footer>
+      <button type="submit">Enviar</button>
+    </form>
+    <script src="index.js"></script>
   </body>
 </html>
